welcome.lessons.welcome.array.maxvalue.Extrema.scala.error
extrema:8: error: ';' expected but 'if' found.
		} if (min>nums(i)) {
                  ^